// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access local property 1`] = `
Object {
  "alertResult": undefined,
  "code": "[][\\"length\\"];",
  "displayResult": undefined,
  "result": 0,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins don't create additional errors when it's not their fault 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return a;
}
map(f, list(1, 2));",
  "displayResult": undefined,
  "error": "Line 2: Name a not declared",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of array 1`] = `
Object {
  "alertResult": undefined,
  "code": "[].push;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property push of []",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of arrow function 1`] = `
Object {
  "alertResult": undefined,
  "code": "(() => 1)[\\"constructor\\"];",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property constructor of () => 1",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of builtin 1`] = `
Object {
  "alertResult": undefined,
  "code": "pair[\\"constructor\\"];",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property constructor of function pair(left, right) {
	[implementation hidden]
}",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of function 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f() {}
f[\\"constructor\\"];",
  "displayResult": undefined,
  "error": "Line 2: Cannot read inherited property constructor of function f() {}",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of number 1`] = `
Object {
  "alertResult": undefined,
  "code": "(1).toPrecision;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property toPrecision of 1",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of object 1`] = `
Object {
  "alertResult": undefined,
  "code": "({}).valueOf;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property valueOf of {}",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of string 1`] = `
Object {
  "alertResult": undefined,
  "code": "'hi'.includes;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read inherited property includes of \\"hi\\"",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property of null 1`] = `
Object {
  "alertResult": undefined,
  "code": "null[\\"prop\\"];",
  "displayResult": undefined,
  "error": "Line 1: Cannot read property prop of null",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property of undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined[\\"prop\\"];",
  "displayResult": undefined,
  "error": "Line 1: Cannot read property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property on undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to builtin 1`] = `
Object {
  "alertResult": undefined,
  "code": "map = 5;",
  "displayResult": undefined,
  "error": "Line 1: Cannot assign new value to constant map",
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to builtin 3`] = `
Object {
  "alertResult": undefined,
  "code": "undefined = 5;",
  "displayResult": undefined,
  "error": "Line 1: Cannot assign new value to constant undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to property on undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop = 123;",
  "displayResult": undefined,
  "error": "Line 1: Cannot assign property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to property on variable with value undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "const u = undefined;
u.prop = 123;",
  "displayResult": undefined,
  "error": "Line 2: Cannot assign property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling arrow function with too few arguments 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
f();",
  "displayResult": undefined,
  "error": "Line 2: Expected 1 arguments, but got 0",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling arrow function with too many arguments 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
f(1, 2);",
  "displayResult": undefined,
  "error": "Line 2: Expected 1 arguments, but got 2",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling function with too few arguments 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return x;
}
f();",
  "displayResult": undefined,
  "error": "Line 4: Expected 1 arguments, but got 0",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling function with too many arguments 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return x;
}
f(1, 2);",
  "displayResult": undefined,
  "error": "Line 4: Expected 1 arguments, but got 2",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value "string" 1`] = `
Object {
  "alertResult": undefined,
  "code": "'string'();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value \\"string\\"",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value 0 1`] = `
Object {
  "alertResult": undefined,
  "code": "0();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value 0",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value array 1`] = `
Object {
  "alertResult": undefined,
  "code": "[1]();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value [1]",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value null 1`] = `
Object {
  "alertResult": undefined,
  "code": "null();",
  "displayResult": undefined,
  "error": "Line 1: null literals are not allowed",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value object 1`] = `
Object {
  "alertResult": undefined,
  "code": "({a: 1})();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value {\\"a\\": 1}",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value true 1`] = `
Object {
  "alertResult": undefined,
  "code": "true();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value true",
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined();",
  "displayResult": undefined,
  "error": "Line 1: Calling non-function value undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when deeply accessing property on undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop.prop;",
  "displayResult": undefined,
  "error": "Line 1: Cannot read property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when deeply assigning to property on variable with value undefined 1`] = `
Object {
  "alertResult": undefined,
  "code": "const u = undefined;
u.prop.prop = 123;",
  "displayResult": undefined,
  "error": "Line 2: Cannot read property prop of undefined",
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring constant 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
const f = x => x;",
  "displayResult": undefined,
  "error": "Line 2: SyntaxError: Identifier 'f' has already been declared (2:6)",
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring constant as variable 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
let f = x => x;",
  "displayResult": undefined,
  "error": "Line 2: SyntaxError: Identifier 'f' has already been declared (2:4)",
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring variable 1`] = `
Object {
  "alertResult": undefined,
  "code": "let f = x => x;
let f = x => x;",
  "displayResult": undefined,
  "error": "Line 2: SyntaxError: Identifier 'f' has already been declared (2:4)",
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring variable as constant 1`] = `
Object {
  "alertResult": undefined,
  "code": "let f = x => x;
const f = x => x;",
  "displayResult": undefined,
  "error": "Line 2: SyntaxError: Identifier 'f' has already been declared (2:6)",
  "visualiseListResult": undefined,
}
`;

exports[`Nice errors when errors occur inside builtins 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(\\"10\\");",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`Nice errors when errors occur inside builtins 3`] = `
Object {
  "alertResult": undefined,
  "code": "parse(\\"'\\");",
  "displayResult": undefined,
  "error": "Line 1: ParseError: SyntaxError: Unterminated string constant (1:0)",
  "visualiseListResult": undefined,
}
`;

exports[`Runtime error when redeclaring constant 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring constant 2`] = `""`;

exports[`Runtime error when redeclaring constant 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring constant 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring constant as variable 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring constant as variable 2`] = `""`;

exports[`Runtime error when redeclaring constant as variable 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring constant as variable 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring variable 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring variable 2`] = `""`;

exports[`Runtime error when redeclaring variable 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring variable 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring variable as constant 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring variable as constant 2`] = `""`;

exports[`Runtime error when redeclaring variable as constant 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring variable as constant 4`] = `"Line 2: Redeclaring name f"`;

exports[`Undefined variable error is thrown 1`] = `
Object {
  "alertResult": undefined,
  "code": "im_undefined;",
  "displayResult": undefined,
  "error": "Line 1: Name im_undefined not declared",
  "visualiseListResult": undefined,
}
`;
